feat(infra): Consolida arquitetura para banco de dados único (main)
Remove a integração com o banco de dados e-SUS, consolidando a
arquitetura para operar exclusivamente com o banco de dados GASPO.

- **Remoção da integração e-SUS:**
  - Elimina o serviço postgres_esus e seus volumes do Docker Compose.
  - Remove configurações de datasource e JPA específicas do e-SUS.
  - Deleta modelos, repositórios e agregados relacionados ao e-SUS.

- **Migração e refatoração de entidades:**
  - Entidades como UnidadeSaude, Profissional e Consulta foram
    recriadas/movidas para o domínio `gaspo` com novos atributos.
  - O modelo de Usuario agora inclui CNS e telefone, removendo
    a dependência de `idCidadaoEsus`.

- **Adaptação de serviços e controladores:**
  - Todos os serviços e controladores foram refatorados para operar
    com as novas entidades do GASPO, simplificando a lógica.
  - Endpoints REST e páginas web para gestão de Profissionais e
    Unidades de Saúde foram implementados.

- **Atualização da documentação:**
  - O README e DOCKER.md foram atualizados para refletir a nova
    arquitetura de banco de dados único.